# GalerkinTools

./: CMakeLists.txt  Makefile  Readme.md
cmake/config/: Config.cmake.in  ConfigVersion.cmake.in
doc/: Doxyfile  galerkin_tools.tag  mainpage.dox
doc/html/: annotated.html  assembly__helper_8h.html  assembly__helper_8h_source.html  class_assembly_helper-members.html  class_assembly_helper.html  class_assembly_helper__coll__graph.map  class_assembly_helper__coll__graph.md5  class_block_solver_wrapper_m_a57-members.html  class_block_solver_wrapper_m_a57.html  class_block_solver_wrapper_m_a57__coll__graph.map  class_block_solver_wrapper_m_a57__coll__graph.md5  class_block_solver_wrapper_m_a57__inherit__graph.map  class_block_solver_wrapper_m_a57__inherit__graph.md5  class_block_solver_wrapper_m_u_m_p_s-members.html  class_block_solver_wrapper_m_u_m_p_s.html  class_block_solver_wrapper_m_u_m_p_s__coll__graph.md5  class_block_solver_wrapper_m_u_m_p_s__inherit__graph.map  class_block_solver_wrapper_m_u_m_p_s__inherit__graph.md5  class_block_solver_wrapper_p_a_r_d_i_s_o-members.html  class_block_solver_wrapper_p_a_r_d_i_s_o.html  class_block_solver_wrapper_p_a_r_d_i_s_o__coll__graph.map  class_block_solver_wrapper_p_a_r_d_i_s_o__coll__graph.md5  class_block_solver_wrapper_p_a_r_d_i_s_o__inherit__graph.map  class_block_solver_wrapper_p_a_r_d_i_s_o__inherit__graph.md5  class_block_solver_wrapper_u_m_f_p_a_c_k-members.html  class_block_solver_wrapper_u_m_f_p_a_c_k.html  class_block_solver_wrapper_u_m_f_p_a_c_k2-members.html  class_block_solver_wrapper_u_m_f_p_a_c_k2.html  class_block_solver_wrapper_u_m_f_p_a_c_k2__coll__graph.map  class_block_solver_wrapper_u_m_f_p_a_c_k2__coll__graph.md5  class_block_solver_wrapper_u_m_f_p_a_c_k2__inherit__graph.map  class_block_solver_wrapper_u_m_f_p_a_c_k2__inherit__graph.md5  class_block_solver_wrapper_u_m_f_p_a_c_k__coll__graph.map  class_block_solver_wrapper_u_m_f_p_a_c_k__coll__graph.md5  class_block_solver_wrapper_u_m_f_p_a_c_k__inherit__graph.map  class_block_solver_wrapper_u_m_f_p_a_c_k__inherit__graph.md5  class_dependent_field-members.html  class_dependent_field.html  class_dependent_field_3_01spacedim_00_01spacedim_01_4-members.html  class_dependent_field_3_01spacedim_00_01spacedim_01_4.html  (+356 more)
doc/latex/: annotated.tex  assembly__helper_8h.tex  class_assembly_helper.tex  class_assembly_helper__coll__graph.md5  class_block_solver_wrapper_m_a57.tex  class_block_solver_wrapper_m_a57__coll__graph.md5  class_block_solver_wrapper_m_a57__inherit__graph.md5  class_block_solver_wrapper_m_u_m_p_s.tex  class_block_solver_wrapper_m_u_m_p_s__coll__graph.md5  class_block_solver_wrapper_m_u_m_p_s__inherit__graph.md5  class_block_solver_wrapper_p_a_r_d_i_s_o.tex  class_block_solver_wrapper_p_a_r_d_i_s_o__coll__graph.md5  class_block_solver_wrapper_p_a_r_d_i_s_o__inherit__graph.md5  class_block_solver_wrapper_u_m_f_p_a_c_k.tex  class_block_solver_wrapper_u_m_f_p_a_c_k2.tex  class_block_solver_wrapper_u_m_f_p_a_c_k2__inherit__graph.md5  class_block_solver_wrapper_u_m_f_p_a_c_k__coll__graph.md5  class_block_solver_wrapper_u_m_f_p_a_c_k__inherit__graph.md5  class_dependent_field.tex  class_dependent_field_3_01spacedim_00_01spacedim_01_4.tex  class_dependent_field_term.tex  class_dependent_field_term__coll__graph.md5  class_dirichlet_constraint.tex  class_dirichlet_constraint__coll__graph.md5  class_dirichlet_constraint__inherit__graph.md5  class_do_f_handler_system.tex  class_do_f_handler_system__coll__graph.md5  class_do_f_renumbering.tex  class_do_f_renumbering__coll__graph.md5  class_do_f_renumbering__inherit__graph.md5  class_do_f_renumbering_offset.tex  class_do_f_renumbering_offset__coll__graph.md5  class_do_f_renumbering_offset__inherit__graph.md5  class_domain_cell_do_f_iterator.tex  class_domain_cell_do_f_iterator__inherit__graph.md5  class_f_e___d_g_q_anisotropic.tex  class_f_e___d_g_q_anisotropic__coll__graph.md5  class_f_e___d_g_q_anisotropic__inherit__graph.md5  class_f_e_values_interface.tex  class_f_e_values_interface__coll__graph.md5  (+102 more)
doc/notes/: bibliography.bib  galerkin_tools.tex
examples/dealii_step46/: CMakeLists.txt  dealii_step46.cc
include/galerkin_tools/: assembly_helper.h  config.h  config.h.in  (+17 more)
source/: CMakeLists.txt  assembly_helper.cc  dependent_field.cc  dirichlet_constraint.cc  dof_handler_system.cc  dof_renumbering.cc  fe_dgq_anisotropic.cc  fe_values_interface.cc  independent_field.cc  ldr.cc  linear_material.cc  scalar_functional.cc  solver_wrapper.cc  tools.cc  total_potential.cc  total_potential_contribution.cc  triangulation_system.cc  two_block_matrix.cc  two_block_sparsity_pattern.cc
tests/: CMakeLists.txt  assembly_helper_parallel_00.cc  assembly_helper_parallel_00.with_p4est=true.with_mpi=true.mpirun=4.output  assembly_solution_parallel_00.cc  assembly_solution_parallel_00.with_p4est=on.mpirun=4.output  block_solver_wrapper_umfpack_2_00.cc  block_solver_wrapper_umfpack_2_00.with_umfpack=true.output  compute_map_dofs_00.cc  compute_map_dofs_00.with_p4est=on.mpirun=4.output  dependent_fields_00.cc  dependent_fields_00.output  derivatives_00.cc  derivatives_00.output  derivatives_01.cc  derivatives_01.output  derivatives_02.cc  derivatives_02.output  distance_two_solutions_00.cc  distance_two_solutions_01.cc  distance_two_solutions_01.output  dof_handler_system_00.cc  dof_handler_system_00.with_p4est=on.mpirun=4.output  dof_handler_update_interface_00.cc  dof_handler_update_interface_00.output  dof_renumbering_00.cc  dof_renumbering_00.output  dof_renumbering_split_vector_00.cc  dof_renumbering_split_vector_00.output  get_nonprimitive_scalar_functional_values_00.cc  get_nonprimitive_scalar_functional_values_00.with_p4est=on.mpirun=4.output  hanging_node_constraints_00.cc  hanging_node_constraints_00.with_p4est=true.with_mpi=true.mpirun=4.output  ldr_decomposition_00.cc  ldr_decomposition_00.output  solver_wrapper_petsc_00.cc  solver_wrapper_petsc_00.with_petsc=true.with_petsc_with_mumps=true.with_mpi=true.mpirun=4.output  solver_wrapper_umfpack_00.cc  tests.h  triangulation_system_00.cc  triangulation_system_00.output  (+4 more)
(+277 files in other folders)
